pushgateway/pushgateway-deployment.yaml
apiVersion: v1
kind: List

items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: pushgateway
    name: pushgateway
  spec:
    ports:
    - port: 9091
      protocol: TCP
      targetPort: 9091
    selector:
      app: pushgateway
    type: ClusterIP

- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: pushgateway
    name: pushgateway
  spec:
    host: pushgateway.getup.io
    port:
      targetPort: http
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: proxy
      weight: 100
    wildcardPolicy: None

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: pushgateway
    name: pushgateway
  spec:
    replicas: 1
    selector:
      app: pushgateway
    strategy:
      activeDeadlineSeconds: 600
      recreateParams:
        timeoutSeconds: 300
      type: Recreate
    template:
      metadata:
        labels:
          app: pushgateway
      spec:
        containers:
        - command:
          - /bin/pushgateway
          - -persistence.file=/data
          image: prom/pushgateway:latest
          imagePullPolicy: IfNotPresent
          name: pushgateway
          ports:
          - containerPort: 9091
            protocol: TCP
          resources:
            limits:
              cpu: 50m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 128Mi
          volumeMounts:
          - mountPath: /data
            name: pushgateway-data
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        volumes:
        - name: pushgateway-data
          persistentVolumeClaim:
            claimName: pushgateway-data
    triggers:
    - type: ConfigChange

- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      app: pushgateway
      snapshot: "false"
    name: pushgateway-data
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    storageClassName: gp2
